Add support for WM_NCPOINTER* messages.

A recent change caused the caption buttons to stop responding to touch.
When I investigated, the change caused Windows to send WM_NCPOINTERDOWN
and WM_NCPOINTERUP in that area (which we don't handle), where
previously it was sending WM_POINTERDOWN and WM_POINTERUP.

Since the change in question is fixing a different critical issue, this
patch implements handling for WM_NCPOINTERDOWN, WM_NCPOINTERUP, and
WM_NCPOINTERUPDATE, by delegating to the existing touch event handler.

This patch also modifies the workaround frin crrev.com/c/1260507, since
the type of messages being translated into ui::ET_TOUCH_RELEASED events
is now different.

Bug: 897662
Change-Id: I6fd052211b91a9a78834573deac830883972092b
Reviewed-on: https://chromium-review.googlesource.com/c/1330838
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608108}
Former-commit-id: fbdbb023f2619c745abcd8bcab3039688b8eded5